--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,47 @@
 h1 {
   text-align: center;
+  font-family: sans-serif;
+}
+body {
+  background-color: rgb(245, 241, 241);
 }
 footer {
   text-align: center;
   font-weight: 300;
 }
+select {
+  display: block;
+  width: 100%;
+  border-radius: 5px;
+  padding: 10px;
+}
 .container {
-  margin-left: 50px;
+  margin: 60px auto;
+  max-width: 600px;
+  background: white;
+  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.4);
+  border-radius: 10px;
+  padding: 30px 50px 50px 50px;
+}
+.city {
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px dashed rgba(0, 0, 0, 0.2);
+  padding: 0px 0px 0px 0px;
+}
+.city:last-child {
+  border: none;
+}
+.time {
+  font-size: 30px;
+  font-weight: bold;
+  padding-left: 20px;
+}
+.time small {
+  font-size: 18px;
+  vertical-align: middle;
+  line-height: 36px;
+}
+.date {
+  opacity: 0.7;
 }
